--- a/templates/template_gsc_meta_header.html
+++ b/templates/template_gsc_meta_header.html
@@ -1,25 +1,25 @@
 Pool Information: 
     Pool ID: ["Complete this field if the samples will be submitted in tubes. Enter the label as it is written on the tube(s) (this can be the same as the Sample ID).\nIf the samples are submitted in a plate, complete the 'Plate ID' field above.", False]
-    Tube Label\n(label on tubes): ["Complete this field if the samples will be submitted in tubes. Enter the label as it is written on the tube(s) (this can be the same as the Sample ID).\nIf the samples are submitted in a plate, complete the 'Plate ID' field above.", False]
-    Taxnomy_ID\n(e.g. 9606 for human): ["This is as per the NCBI Taxonomy. The link is above (*).\nSome Taxonomy IDs are: human = 9606; house mouse = 10090, caenorhabditis elegans = 6239. If the sample is a mixture (i.e. mixture of bacteria samples), enter the best fit for the mixture.", False]
+    "Tube Label\n(label on tubes)": ["Complete this field if the samples will be submitted in tubes. Enter the label as it is written on the tube(s) (this can be the same as the Sample ID).\nIf the samples are submitted in a plate, complete the 'Plate ID' field above.", False]
+    "Taxnomy_ID\n(e.g. 9606 for human)": ["This is as per the NCBI Taxonomy. The link is above (*).\nSome Taxonomy IDs are: human = 9606; house mouse = 10090, caenorhabditis elegans = 6239. If the sample is a mixture (i.e. mixture of bacteria samples), enter the best fit for the mixture.", False]
 
 Analyte Information:
-    DNA Volume\n(uL): ["Mandatory Field. The volume of DNA that you are submitting, in uL.", False]
-    DNA Concentration\n(nM): ["Mandatory Field. Total amount of DNA you are submitting, in nM.", False]
-    Storage Medium\n(for TE, specify 10:1 or 10:0.1): ["Enter the solution in which the sample is stored/resuspended. If it is TE please specify the molarity (10:1 or 10:0.1, typically).", False]
+    "DNA Volume\n(uL)": ["Mandatory Field. The volume of DNA that you are submitting, in uL.", False]
+    "DNA Concentration\n(nM)": ["Mandatory Field. Total amount of DNA you are submitting, in nM.", False]
+    "Storage Medium\n(for TE, specify 10:1 or 10:0.1)": ["Enter the solution in which the sample is stored/resuspended. If it is TE please specify the molarity (10:1 or 10:0.1, typically).", False]
     Quantification Method: ["Enter the method used to quantify your sample. For example: Nanodrop, UV Spec, Pico Green, Qubit etc.  NOTE:  Qubit is the prefer quantification method.", False]
 
 Library Information:
-    Library Type\n(e.g. Genome, exome, transcriptome amplicon, ChIP, etc.): ["Enter the type of library that you are submitting e.g. genome, exome, transcriptome, ChIP etc.", False]
+    "Library Type\n(e.g. Genome, exome, transcriptome amplicon, ChIP, etc.)": ["Enter the type of library that you are submitting e.g. genome, exome, transcriptome, ChIP etc.", False]
     Library Construction Method: ["Enter the method you used to construct the library.", False]
     Size Range (bp): ["Enter the size range in bp.", False]
     Average Size (bp): ["None", False]
     Number of libraries in pool: ["If the library being submitted is pooled, enter pooling details here (e.g. the number of libraries in the pool).", False]
 
 Work Request Details:
-    Read Type\n(SET or PET): ["Specify Single End Tag (SET) or Paired End Tag (PET) from the drop down list.", False]
-    Read Length\n(base pairs): ["The length of sequencing read required. Typically this will be 75 base pair or 100 base pair.", False]
-    Sequencing Goals\n(# lanes): ["Specify how many lanes are to be run for each sample or for each pool (if your samples are pooled).\nExample 1:  3 lanes per pool. Example 2:  Lane 1 etc.", False]
+    "Read Type\n(SET or PET)": ["Specify Single End Tag (SET) or Paired End Tag (PET) from the drop down list.", False]
+    "Read Length\n(base pairs)": ["The length of sequencing read required. Typically this will be 75 base pair or 100 base pair.", False]
+    "Sequencing Goals\n(# lanes)": ["Specify how many lanes are to be run for each sample or for each pool (if your samples are pooled).\nExample 1:  3 lanes per pool. Example 2:  Lane 1 etc.", False]
     Reference genome for alignment: ["Our current default human genome reference version is hg19.  Please contact us directly for our default genome reference version for any other species.", False]
     Format for data dissemination: ["None", False]
 
