added support for jpg and bmp for "Agilent bioanalyzer image file" field, KRONOS-47.

--- a/apps/core/templates/core/library_detail.html
+++ b/apps/core/templates/core/library_detail.html
@@ -88,10 +88,10 @@ Library Details
                     {{value}}
                 </a>
             </td>
-            {% elif field == "Agilent bioanalyzer png file" and value %}
+            {% elif field == "Agilent bioanalyzer image file" and value %}
             <th id="thid">{{field}}:</th>
             <td id="tdid">
-                <a href="{{library.libraryquantificationandstorage.agilent_bioanalyzer_png.url}}">
+                <a href="{{library.libraryquantificationandstorage.agilent_bioanalyzer_image.url}}">
                     {{value}}
                 </a>
             </td>
