--- a/apps/core/templates/core/library_list.html
+++ b/apps/core/templates/core/library_list.html
@@ -20,6 +20,7 @@ List of Libraries
                     <th>Description</th>
                     <th>JIRA Ticket</th>
                     <th>Project</th>
+                    <th>Library Location</th>
                     <th>#Sublibraries</th>
                     <th>Sequenced</th>
                 </tr>
@@ -36,6 +37,7 @@ List of Libraries
                         {{project}}<br>
                         {% endfor %}
                     </td>
+                    <td>{{library.libraryquantificationandstorage.library_location}}</td>
                     <td style="text-align:center;">{{library.num_sublibraries}}</td>
                     {% if library.is_sequenced %}
                     <td style="text-align:center;"><i class="fa fa-check" aria-hidden="true" style="color:green;" title="Sequenced"></i></td>
