--- a/templates/template_gsc_meta_header.html
+++ b/templates/template_gsc_meta_header.html
@@ -1,7 +1,7 @@
 Pool Information: 
     Pool ID: ["Complete this field if the samples will be submitted in tubes. Enter the label as it is written on the tube(s) (this can be the same as the Sample ID).\nIf the samples are submitted in a plate, complete the 'Plate ID' field above.", False]
     "Tube Label\n(label on tubes)": ["Complete this field if the samples will be submitted in tubes. Enter the label as it is written on the tube(s) (this can be the same as the Sample ID).\nIf the samples are submitted in a plate, complete the 'Plate ID' field above.", False]
-    "Taxnomy_ID\n(e.g. 9606 for human)": ["This is as per the NCBI Taxonomy. The link is above (*).\nSome Taxonomy IDs are: human = 9606; house mouse = 10090, caenorhabditis elegans = 6239. If the sample is a mixture (i.e. mixture of bacteria samples), enter the best fit for the mixture.", False]
+    "Taxonomy_ID\n(e.g. 9606 for human)": ["This is as per the NCBI Taxonomy. The link is above (*).\nSome Taxonomy IDs are: human = 9606; house mouse = 10090, caenorhabditis elegans = 6239. If the sample is a mixture (i.e. mixture of bacteria samples), enter the best fit for the mixture.", False]
 
 Analyte Information:
     "DNA Volume\n(uL)": ["Mandatory Field. The volume of DNA that you are submitting, in uL.", False]
@@ -20,8 +20,9 @@ Work Request Details:
     "Read Type\n(SET or PET)": ["Specify Single End Tag (SET) or Paired End Tag (PET) from the drop down list.", False]
     "Read Length\n(base pairs)": ["The length of sequencing read required. Typically this will be 75 base pair or 100 base pair.", False]
     "Sequencing Goals\n(# lanes)": ["Specify how many lanes are to be run for each sample or for each pool (if your samples are pooled).\nExample 1:  3 lanes per pool. Example 2:  Lane 1 etc.", False]
-    Reference genome for alignment: ["Our current default human genome reference version is hg19.  Please contact us directly for our default genome reference version for any other species.", False]
+    Sequencer: ["None", False]
     Format for data dissemination: ["None", False]
+    Reference genome for alignment: ["Our current default human genome reference version is hg19.  Please contact us directly for our default genome reference version for any other species.", False]
 
 Additional Comments:
     Additional Comments: ["None", False]
