--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -33,6 +33,9 @@ List of Tables
                 <tr>
                     <td><a href="{% url 'core:project_list' %}">Projects</a></td>
                 </tr>
+                <tr>
+                    <td><a href="{% url 'core:summary' %}">Summary Statistics</a></td>
+                </tr>
             </tbody>
         </table>
 </div>
