KRONOS-239 changed "sample" to "primary sample" in field of Library and views

--- a/apps/core/templates/core/library_list.html
+++ b/apps/core/templates/core/library_list.html
@@ -15,7 +15,7 @@ List of Libraries
         <table id="datatable" class="table table-striped">
             <thead>
                 <tr>
-                    <th>Sample ID</th>
+                    <th>Primary Sample ID</th>
                     <th>Chip ID</th>
                     <th>Description</th>
                     <th>JIRA Ticket</th>
