--- a/apps/core/templates/core/sample_list.html
+++ b/apps/core/templates/core/sample_list.html
@@ -15,7 +15,7 @@ List of Samples
         <table id="datatable" class="table table-striped">
             <thead>
                 <tr>
-                    <th>Sample ID</th>
+                    <th>Primary Sample ID</th>
                     <th>Sample Type</th>
                     <th></th>
                 </tr>
