KRONOS-237 added ChipRegion and ChipRegionMetadata tables and foreign keys to library, and SubLibraryInformation, added reading of SmartChipApp input and results and parsing into new tables and SubLibraryInformation

--- a/apps/core/templates/core/library_detail.html
+++ b/apps/core/templates/core/library_detail.html
@@ -121,6 +121,7 @@ Library Details
             <thead>
                 <tr>
                     <th>Sublibrary ID</th>
+                    <th>Region Code</th>
                     {% for field in  sublibinfo_fields %}
                     <th>{{field}}</th>
                     {% endfor %}
@@ -130,6 +131,7 @@ Library Details
                 {% for sublibinfo in library.sublibraryinformation_set.all %}
                 <tr>
                     <td>{{sublibinfo.get_sublibrary_id}}</td>
+                    <td>{{sublibinfo.chip_region.region_code}}</td>
                     {% for value in sublibinfo.get_values %}
                     <td>{{value}}</td>
                     {% endfor %}
