KRONOS-266 Added sample spot/lib prep columns + sorting to library view. Added live search to "related to" fields for sequencing and library creation/update

--- a/apps/core/templates/core/library_list.html
+++ b/apps/core/templates/core/library_list.html
@@ -17,6 +17,8 @@ List of Libraries
                 <tr>
                     <th>Chip ID</th>
                     <th>Primary Sample ID</th>
+                    <th>Sample Spot Date</th>
+                    <th>Library Prep Date</th>
                     <th>Description</th>
                     <th>JIRA Ticket</th>
                     <th>Project</th>
@@ -31,6 +33,8 @@ List of Libraries
                 <tr>
                     <td><a href="{% url 'core:library_detail' pk=library.pk %}">{{library.pool_id}}</a></td>
                     <td>{{library.sample.sample_id}}</td>
+                    <td>{{library.librarysampledetail.sample_spot_date|date:"M j, Y"}}</td>
+                    <td>{{library.libraryconstructioninformation.library_prep_date|date:"M j, Y"}}</td>
                     <td>{{library.description}}</td>
                     <td><a href="https://www.bcgsc.ca/jira/browse/{{library.jira_ticket}}">{{library.jira_ticket}}</a></td>
                     <td>
