--- a/apps/core/templates/core/library_update.html
+++ b/apps/core/templates/core/library_update.html
@@ -31,7 +31,7 @@ Edit Library
                             {% endfor %}
                         </select>
                     {% elif field.name == "relates_to" %}
-                        <select class="selectpicker" id="id_relates_to" name="relates_to" multiple data-none-selected-text="--------">
+                        <select class="selectpicker" id="id_relates_to" data-live-search="True" name="relates_to" multiple data-none-selected-text="--------">
                             {% for lib in related_libs %}
                             {% if lib in selected_related_libs %}
                             <option value={{lib.id}} selected="{{lib}}">{{lib}}</option>
