--- a/apps/core/templates/core/library_create.html
+++ b/apps/core/templates/core/library_create.html
@@ -30,7 +30,7 @@ Create Library
                         <select id="id_sample" name="sample">
                             <option value="{{sample_id}}" selected="selected">{{sample}}</option>
                     {% elif field.name == "relates_to" %}
-                        <select class="selectpicker" id="id_relates_to" name="relates_to" multiple data-none-selected-text="--------">
+                        <select class="selectpicker" data-live-search="True" id="id_relates_to" name="relates_to" multiple data-none-selected-text="--------">
                             {% for lib in related_libs %}
                             <option value={{lib.id}}>{{lib}}</option>
                             {% endfor %}
