--- a/apps/core/templates/core/library_create_from_sample.html
+++ b/apps/core/templates/core/library_create_from_sample.html
@@ -31,7 +31,7 @@ Create Library
                             <option value="{{sample_id}}" selected="selected">{{sample}}</option>
                         </select>
                     {% elif field.name == "relates_to" %}
-                        <select class="selectpicker" id="id_relates_to" name="relates_to" multiple data-none-selected-text="--------">
+                        <select class="selectpicker" id="id_relates_to" data-live-search="True" name="relates_to" multiple data-none-selected-text="--------">
                             {% for lib in related_libs %}
                             <option value={{lib.id}}>{{lib}}</option>
                             {% endfor %}
