--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -2,11 +2,14 @@
 {% load staticfiles %}
 
 {% block title %}
-List of Tables
+Main
 {% endblock %}
 
 {% block body %}
-<div class="container">
+<br/>
+<div class="container" style="border:solid 1px #E0E0E0; border-radius: 3px;">
+    <a style="text-decoration: none;" href="#db_collapse" data-toggle="collapse"><h4>Database</h4></a>
+    <div id="db_collapse" class="collapse in">
         <table class="table-striped" style="width:100%;">
             <tbody>
                 <tr>
@@ -39,5 +42,23 @@ List of Tables
                 </tr>
             </tbody>
         </table>
+    </div>
+</div>
+<br/>
+<div class="container" style="border:solid 1px #E0E0E0; border-radius: 3px;">
+    <a style="text-decoration: none;" href="#analysis_collapse" data-toggle="collapse"><h4>Analysis</h4></a>
+    <div id="analysis_collapse" class="collapse in">
+        <table class="table-striped" style="width:100%;">
+            <tbody>
+                <tr>
+                    <td><a href="{% url 'sisyphus:analysisinformation_list' %}">Job Queue</a> <i class="counter">{{analysisinformation_size}}</i></td>
+                    <td>
+                        <p style="float:right;">
+                        <a href="{% url 'sisyphus:analysisinformation_create_choose_library' %}"><i class="fa fa-plus" aria-hidden="true" style="color:green;"></i> Add</a></p>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
 {% endblock %}
