--- a/apps/core/templates/core/library_list.html
+++ b/apps/core/templates/core/library_list.html
@@ -47,9 +47,9 @@ List of Libraries
                     {% if library.is_sequenced %}
                     <td style="text-align:center;"><i class="fa fa-check" aria-hidden="true" style="color:green;" title="Sequenced"></i></td>
                     {% elif library.libraryquantificationandstorage.qc_check == 'P' %}
-                    <td style="text-align:center"><i class="fa fa-exclamation-triangle" aria-hidden="true" style="color:orange" title="Will sequence"></td>
+                    <td style="text-align:center"><i class="fa fa-exclamation-triangle" aria-hidden="true" style="color:orange" title="Will sequence"></i></td>
                     {% elif library.libraryquantificationandstorage.qc_check == 'N' %}
-                    <td style="text-align:center"><i class="fa fa-times" aria-hidden="true" style="color:red" title="Will not sequence"></td>
+                    <td style="text-align:center"><i class="fa fa-times" aria-hidden="true" style="color:red" title="Will not sequence"></i></td>
                     {% else %}
                     <td style="text-align:center"></td>
                     {% endif %}
