--- a/templates/base_view.html
+++ b/templates/base_view.html
@@ -40,7 +40,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" style="color:white;" href="{% url 'index' %}"><i class="fa fa-home" aria-hidden="true"></i> Single Cell Database (<i>alpha version</i>)</a>
+                    <a class="navbar-brand" style="color:white;" href="{% url 'index' %}"><i class="fa fa-home" aria-hidden="true"></i> Colossus Single Cell Database</a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
