SC-648: automation of cell count plot generation

--- a/apps/core/templates/core/summary.html
+++ b/apps/core/templates/core/summary.html
@@ -77,7 +77,11 @@ Summary Statistics
             </div>
         </div>
     </div>
+</div><br>
 
+<div class="container">
+    <a class="btn btn-primary btn-sm" href="{% url 'core:summary_graph' %}">Graph cell count</a>
 </div>
+
 
 {% endblock %}
