KRONOS-357: Move apps into project root, add roadmap, and fix favicon

--- a/templates/base_view.html
+++ b/templates/base_view.html
@@ -23,9 +23,10 @@
         <!-- end of DataTable -->
 
         <link rel="stylesheet" href="{% static 'core/style.css' %}" />
+        <link rel="shortcut icon" type="image/png" href="{% static 'core/favicon.ico' %}"/>
         <!-- <script scr="{% static 'core/scripts.js' %}"></script> -->
 
-        <title>Single Cell Database</title>
+        <title>Colossus</title>
 
     </head>
     <body>
